src/test/scala/wacc/wacc_examples/invalid/syntaxErr/classes/directArrayAccess.wacc
begin
    class Array {
        int[] x
    }
    Array a = new Array { [0, 1, 2] } ;
    int x = a.x[1] ;
    exit x
end